# OpenClTest

./: .gitignore  CMakeLists.txt  OpenClTest.pro  README.md  ReadMe.txt  clinfo.cpp  clinfo.h  clinfogatherer.cpp  clinfogatherer.h  clinfoserializer.h  jsonclinfoserializer.cpp  jsonclinfoserializer.h  main.cpp  openclbinder.cpp  openclbinder.h  openclexception.h  openclwrapper.cpp  openclwrapper.h  serializer.h  xmlclinfoserializer.cpp  xmlclinfoserializer.h  xmlserializer.cpp  xmlserializer.h
doc/: feladat2.html
include/rapidxml/: rapidxml_print.hpp
src/: CMakeLists.txt
src/OpenClTestApp/: CMakeLists.txt  jsonserializer.cpp  jsonserializer.h  main.cpp  serializer.h  xmlserializer.cpp  xmlserializer.h
src/OpenClTestLib/: CMakeLists.txt  clinfo.cpp  clinfo.h  clinfogatherer.cpp  clinfogatherer.h  openclbinder.cpp  openclbinder.h  opencltester.cpp  opencltester.h  openclwrapper.cpp  openclwrapper.h
